tree-sitter-skald/test/corpus/basics.txt
==================
Variable declaration
==================

~myvar = "hello"

---

(source_file
  (empty)
  (variable_declaration
    name: (variable_name)
    value: (rvalue (simple_value (string)))))

==================
Mixed declaration and comment header
==================

-- This is a comment!
~ some_var = 3 -- This is a raw value
~ some_other = :call_method() -- this initialized the variable with a call to an external method

-- These are inherited variables, with local testing values
< imported_var = 0
< player_name = "Billy"

---

(source_file
  (empty)
  (comment)
  (empty)
  (variable_declaration
    name: (variable_name)
    value: (rvalue
      (simple_value
        (number)))
    (comment))
  (variable_declaration
    name: (variable_name)
    value: (rvalue
      (method_call
        method: (identifier)))
    (comment))
  (empty)
  (comment)
  (empty)
  (variable_declaration
    name: (variable_name)
    value: (rvalue
      (simple_value
        (number))))
  (variable_declaration
    name: (variable_name)
    value: (rvalue
      (simple_value
        (string)))))

==================
Basic block with attributed beat
==================

#start_block

Alice: Hello world

---

(source_file
  (empty)
  (block
    tag: (block_tag (identifier))
    (empty)
    (beat
      attribution: (attribution)
      content: (text_content (text_fragment)))))

=====================
Make sure colons are ignored outside of attributions
=====================

#block_tag

Beat text here, as always

char_name: This is attributed.

This one just tests a normal colon usage: we'll see if it works!

---

(source_file
  (empty)
  (block
    (block_tag
      (identifier))
    (empty)
    (beat
      (text_content
        (text_fragment)))
    (empty)
    (beat
      (attribution)
      (text_content
        (text_fragment)))
    (empty)
    (beat
      (text_content
        (text_fragment)))))

===================
Are choices parsing correctly?
===================

#block_tag

Beat text here, as always

> First choice
> Exit choice
  EXIT 14
> Go choice
  GO next chapter.ska -- This GO moves us to a different Skald file.
> (? some_condition = "test") This choice is conditional
> This one goes -> to_school
> This one mutates
  ~ equate = :some_method(with_arg)
  ~ add += 3
  ~ add += :method_output("cat")

---

(source_file
      (empty)
      (block
        (block_tag
          (identifier))
        (empty)
        (beat
          (text_content
            (text_fragment)))
        (empty)
        (choices
          (choice
            (text_content
              (text_fragment)))
          (choice
            (text_content
              (text_fragment))
            (indented_operation
              (operation
                (exit_op
                  (rvalue
                    (simple_value
                      (number)))))))
          (choice
            (text_content
              (text_fragment)))
          (ERROR
            (UNEXPECTED 'n'))
          (comment)
          (empty)
          (choice
            (conditional
              (conditional_expression
                (conditional_clause
                  (conditional_atom
                    (rvalue
                      (variable_ref
                        (variable_name)))
                    (rvalue
                      (simple_value
                        (string)))))))
            (text_content
              (text_fragment)))
          (choice
            (text_content
              (text_fragment)))
          (choice
            (text_content
              (text_fragment))
            (indented_operation
              (operation
                (mutation_op
                  (variable_name)
                  (rvalue
                    (method_call
                      (identifier)
                      (rvalue
                        (variable_ref
                          (variable_name))))))))
            (indented_operation
              (operation
                (mutation_op
                  (variable_name)
                  (rvalue
                    (simple_value
                      (number))))))
            (indented_operation
              (operation
                (mutation_op
                  (variable_name)
                  (rvalue
                    (method_call
                      (identifier)
                      (rvalue
                        (simple_value
                          (string))))))))))))
