tree-sitter-skald/test/corpus/beats-insertions.txt
==================
Sambel block with logic beats, insertions, switches, etc
==================

#test_block

First beat

Second beat with an {injection}.

This one has a normal ternary, and {some_flag ? "yarrrrr!" : "narrrrr."} is the result.

Switch ternary: {pet_type ? [1: "cat", 2: "dog", 3: "camel"]}

This is a normal text block with some ops on it
  -> some_transition -- These intended commands following beats or choices are "operations"
  ~ some_var = another_var

* (? should_transfer)
  ~ test = 1
  GO subfolder/other_module.ska

* (? should_transfer_directed)
  GO subfolder/other_module.ska -> some_tag

(? show_conditional) A conditional can precede a beat as well.

* (else)
  EXIT 14

* (? is_true) -> one_way
* (else) ~ got_lost = true

---

(source_file
      (empty)
      (block
        (block_tag
          (identifier))
        (empty)
        (beat
          (text_content
            (text_fragment)))
        (empty)
        (beat
          (text_content
            (text_fragment)
            (insertion
              (simple_insertion
                (rvalue
                  (variable_ref
                    (variable_name)))))
            (text_fragment)))
        (empty)
        (beat
          (text_content
            (text_fragment)
            (insertion
              (ternary_insertion
                (rvalue
                  (variable_ref
                    (variable_name)))
                (rvalue
                  (simple_value
                    (string)))
                (rvalue
                  (simple_value
                    (string)))))
            (text_fragment)))
        (empty)
        (beat
          (text_content
            (text_fragment)
            (insertion
              (switch_ternary
                (rvalue
                  (variable_ref
                    (variable_name)))
                (switch_case
                  (simple_value
                    (number))
                  (rvalue
                    (simple_value
                      (string))))
                (switch_case
                  (simple_value
                    (number))
                  (rvalue
                    (simple_value
                      (string))))
                (switch_case
                  (simple_value
                    (number))
                  (rvalue
                    (simple_value
                      (string))))))))
        (empty)
        (beat
          (text_content
            (text_fragment))
          (indented_operation
            (operation
              (move_op
                (identifier)))
            (comment))
          (indented_operation
            (operation
              (mutation_op
                (variable_name)
                (rvalue
                  (variable_ref
                    (variable_name)))))))
        (empty)
        (logic_beat
          (conditional
            (conditional_expression
              (conditional_clause
                (conditional_atom
                  (rvalue
                    (variable_ref
                      (variable_name)))))))
          (indented_operation
            (operation
              (mutation_op
                (variable_name)
                (rvalue
                  (simple_value
                    (number))))))
          (indented_operation
            (operation
              (go_module_op
                (module_path)))))
        (empty)
        (logic_beat
          (conditional
            (conditional_expression
              (conditional_clause
                (conditional_atom
                  (rvalue
                    (variable_ref
                      (variable_name)))))))
          (indented_operation
            (operation
              (go_module_op
                (module_path)
                (identifier)))))
        (empty)
        (beat
          (conditional
            (conditional_expression
              (conditional_clause
                (conditional_atom
                  (rvalue
                    (variable_ref
                      (variable_name)))))))
          (text_content
            (text_fragment)))
        (empty)
        (logic_beat
          (indented_operation
            (operation
              (exit_op
                (rvalue
                  (simple_value
                    (number)))))))
        (empty)
        (logic_beat
          (conditional
            (conditional_expression
              (conditional_clause
                (conditional_atom
                  (rvalue
                    (variable_ref
                      (variable_name)))))))
          (operation
            (move_op
              (identifier))))
        (logic_beat
          (operation
            (mutation_op
              (variable_name)
              (rvalue
                (simple_value
                  (boolean))))))))


